<resources>
    <string name="app_name">Star Pro</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="recomendation">Para registrar la escala de Bortle se recomienda utilizar la
        aplicacion Light Pollution Map.\nPara aprender como usar esta aplicación, siga los pasos descritos
    en el boton de información</string>
    <string name="access_explain">Muy facil: Se puede acceder facilmente en todos los medios de
        transporte.Se puede llevar equipo de gran envergadura.\n\n
    Facil: Se puede acceder sin mayores problemas en todo tipo de transporte privado.El terreno permite
    equipo grande, pero puede ser que no este nivelado.\n\n
    Normal: Solo transportes de tracción 4x4 pueden acceder, pero tambien se puede en bicicleta.
        El equipo queda a discreción del medio de transporte y su capacidad.\n\n
    Dificil: no cuenta con acceso en vehiculos más grandes que una bicicleta. El tamaño del equipo queda
     limitado por su porte y peso, lo que el observador pueda cargar.\n\n
    Muy dificil: El terreno de la ruta es de senderismo, con piedras sueltas, limitando su acceso a solo medio de pie. El
    equipo, por consiguiente, puede ser pequeño, pero se aconseja precaución, ya que el equipo se puede
    dañar en el trayecto.\n\n
    Si sientes que el acceso no entra en ninguna de estas categorias, se recomienda que elijas la que
    más se acerque, y complementes en la sección de comentario.</string>
    <string name="info2">INFO ACCESIBILIDAD</string>
    <string name="info">INFO BORTLE</string>
    <string name="escala_de_bortle">Escala de Bortle</string>
    <string name="ruta_opcional">Ruta (opcional)</string>
    <string name="accesibilidad">Accesibilidad</string>
    <string name="b1">1.Cielo oscuro excelente</string>
    <string name="b2">2.Cielo oscuro tipico</string>
    <string name="b3">3.Cielo rural</string>
    <string name="b4">4.Cielo rural-periurbano</string>
    <string name="b5">5.Cielo periurbano</string>
    <string name="b6">6.Cielo periurbano brillante</string>
    <string name="b7">7.Cielo periurbano-urbano</string>
    <string name="b8">8.Cielo urbano</string>
    <string name="b9">9.Cielo de centro de ciudad</string>
    <string name="upload_route">upload route</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="nombre_del_punto_de_observaci_n">Nombre del punto de observación</string>
    <string name="contaminaci_n_luminica_en_el_punto">Contaminación luminica en el punto</string>
    <string name="contaminaci_n_luminica_en_el_rea">Contaminación luminica en el área</string>
    <string name="nivel_de_accesibilidad">Nivel de accesibilidad</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="comentario_del_usuario_creador">Comentario del usuario Creador</string>
    <string name="ver_lista_de_eventos_para_este_punto">Ver lista de eventos para este punto</string>
    <string name="calificaci_n">Calificación</string>
    <string name="report">Report</string>
    <string name="coordPlace">Latitud:%1$s Longitud:%2$s</string>
    <string name="dang">aikenkiponlusinyu</string>
    <string name="Muy_Facil">Muy Facil</string>
    <string name="Facil">Facil</string>
    <string name="Normal">Normal</string>
    <string name="Dificil">Dificil</string>
    <string name="Muy_Dificil">Muy Dificil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aficionado">"Aficionado"</string>
    <string name="intermedio">"Intermedio"</string>
    <string name="avanzado">"Avanzado"</string>
    <string name="bortle_explain_1_txt">Primero, debe descargar la aplicación\n\"Light Pollution Map\"</string>
    <string name="aceptar">Aceptar</string>
    <string name="modify_mark_button">Modificar punto de observacion</string>
</resources>