<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        tools:context=".CreateMarkerActivity">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Seleccionar archivo .gpx"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="Comentarios adicionales"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/ruta_opcional"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnrAccessibility" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="28dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info2"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/spnrBortleArea"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spnrBortleArea"
            style="@style/SpinnerStyle"
            android:theme="@style/SpinnerTheme"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:layout_gravity = "center"
            android:background="@drawable/color_blob"
            android:gravity="center"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnrBortleCenter"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvLatLng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Coordenadas : latitud, longitud" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/escala_de_bortle"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLatLng" />

        <Spinner
            android:id="@+id/spnrBortleCenter"
            style="@style/SpinnerStyle"
            android:theme="@style/SpinnerTheme"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/color_blob"
            android:gravity="center"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/accesibilidad"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnrBortleArea" />

        <Spinner
            android:id="@+id/spnrAccessibility"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/color_blob"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="28dp"
            android:layout_height="27dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tvLatLng"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/recomendation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/upload_route"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:srcCompat="@android:drawable/stat_sys_upload"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#8F2A12"
            android:hint="Archivo..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/etCommentary"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginTop="8dp"
            android:background="#4E4D4B"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Escriba aca su comentario..."
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            app:barrierMargin="@dimen/material_emphasis_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


        <Button
            android:id="@+id/btnAddMrk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="Agregar Punto de Observación"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCommentary"
            app:layout_constraintVertical_bias="0.115" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddMrk" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
